// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures – real catalogue > ACME Retail matches a non-empty set of active triggers 1`] = `
[
  "acc-schedule-iii",
  "audit-statutory",
  "clra-licence",
  "codex-ax001-v1",
  "codex-ax002-v1",
  "codex-ax003-v1",
  "codex-ax005-v1",
  "codex-ax006-v1",
  "codex-ax007-v1",
  "codex-ax008-v1",
  "codex-ax009-v1",
  "codex-ax010-v1",
  "codex-ax011-v1",
  "codex-ax012-v1",
  "codex-ax013-v1",
  "codex-ax015-v1",
  "codex-ax016-v1",
  "codex-ax034-v1",
  "codex-ax035-v1",
  "codex-ax036-v1",
  "codex-ax037-v1",
  "codex-ax043-v1",
  "codex-c004-v1",
  "codex-c015-v1",
  "codex-c016-v1",
  "codex-c029-v1",
  "codex-c046-v1",
  "codex-c047-v1",
  "codex-c048-v1",
  "codex-c049-v1",
  "codex-c050-v2",
  "codex-c054-v2",
  "codex-c055-v2",
  "codex-c056-v2",
  "codex-c057-v1",
  "codex-c057-v2",
  "codex-c059-v1",
  "codex-c060-v1",
  "codex-c060-v2",
  "codex-c061-v2",
  "codex-c064-v1",
  "codex-c065-v1",
  "codex-c081-v1",
  "codex-c082-v1",
  "codex-c087-v1",
  "codex-c092-v1",
  "codex-c093-v1",
  "codex-c094-v1",
  "codex-c096-v1",
  "codex-c097-v1",
  "codex-c098-v1",
  "codex-c100-v1",
  "codex-c101-v1",
  "codex-c102-v1",
  "codex-c103-v1",
  "codex-c104-v1",
  "codex-c105-v1",
  "codex-c107-v1",
  "codex-c108-v1",
  "codex-if002-v1",
  "codex-if004-v1",
  "codex-if005-v1",
  "codex-if007-v1",
  "codex-if008-v1",
  "codex-if010-v1",
  "codex-if011-v1",
  "codex-if012-v1",
  "codex-if014-v1",
  "codex-if015-v1",
  "codex-if016-v1",
  "codex-n001-v1",
  "codex-n002-v1",
  "codex-n005-v1",
  "codex-n006-v1",
  "codex-n009-v1",
  "codex-n010-v1",
  "codex-n011-v1",
  "codex-n013-v1",
  "codex-n014-v1",
  "codex-n015-v1",
  "codex-n016-v1",
  "codex-n017-v1",
  "codex-n018-v1",
  "codex-n019-v1",
  "codex-n020-v1",
  "codex-n021-v1",
  "codex-n022-v1",
  "codex-n023-v1",
  "codex-n025-v1",
  "codex-n027-v1",
  "codex-n029-v1",
  "codex-n030-v1",
  "codex-n031-v1",
  "codex-n032-v1",
  "codex-n033-v1",
  "codex-n034-v1",
  "codex-n035-v1",
  "codex-n036-v1",
  "codex-n037-v1",
  "codex-n038-v1",
  "codex-n039-v1",
  "codex-n040-v1",
  "codex-n041-v1",
  "codex-n042-v1",
  "codex-n043-v1",
  "codex-n044-v1",
  "codex-n045-v1",
  "codex-n046-v1",
  "codex-n047-v1",
  "codex-n048-v1",
  "codex-n049-v1",
  "codex-s-wb-pt-enrol-v1",
  "codex-s-wb-pt-return-v1",
  "dgft-iec",
  "epfo-international-workers",
  "epfo-joinee-exit",
  "epr-plastic",
  "esic-half-yearly",
  "esic-monthly",
  "fire-noc",
  "fssai-form-d1",
  "fssai-renewal",
  "fssai-state-licence",
  "gst-apob",
  "gst-asmt10",
  "gst-cmp08",
  "gst-einvoice",
  "gst-eway",
  "gst-gstr1",
  "gst-gstr1a",
  "gst-gstr3b",
  "gst-gstr4",
  "gst-gstr7",
  "gst-gstr8",
  "gst-gstr9",
  "gst-gstr9c",
  "ip-opposition",
  "it-44ab-audit",
  "it-advance-tax",
  "it-books-sec44aa",
  "it-form-3ce",
  "it-notice-143",
  "it-sft",
  "labour-bonus",
  "labour-factory-licence",
  "labour-gratuity",
  "labour-lwf",
  "labour-min-wages",
  "labour-registers",
  "labour-shops-renewal",
  "law-change-watch",
  "lm-packaged",
  "lm-weights",
  "mca-adt1",
  "mca-agm",
  "mca-aoc4",
  "mca-aoc4-cfs",
  "mca-ben2",
  "mca-board-meetings",
  "mca-chg1",
  "mca-dir12",
  "mca-dir3-kyc",
  "mca-dpt3",
  "mca-inc20a",
  "mca-inc22a",
  "mca-mgt7",
  "mca-msme1",
  "mca-pas3",
  "mca-sh7",
  "msme-45day",
  "municipal-health-noc",
  "municipal-signage",
  "municipal-trade-renewal",
  "posh-annual-report",
  "posh-ic",
  "pt-first-employee",
  "pt-monthly-return",
  "pt-ptrc",
  "rbi-apr",
  "rbi-fcgpr",
  "rbi-fla",
  "spcb-cte",
  "spcb-hazwaste",
  "tds-15ca-cb",
  "tds-24q",
  "tds-26q",
  "tds-27q",
  "tds-deposit",
  "tds-form16",
  "tds-form16a",
]
`;

exports[`golden fixtures – real catalogue > produces golden match sets for all fixture entities 1`] = `
{
  "ent-acme": {
    "dues": {
      "acc-schedule-iii": "2027-03-31",
      "audit-statutory": "2026-09-30",
      "clra-licence": null,
      "codex-ax001-v1": null,
      "codex-ax002-v1": null,
      "codex-ax003-v1": null,
      "codex-ax005-v1": null,
      "codex-ax006-v1": null,
      "codex-ax007-v1": null,
      "codex-ax008-v1": null,
      "codex-ax009-v1": null,
      "codex-ax010-v1": null,
      "codex-ax011-v1": null,
      "codex-ax012-v1": null,
      "codex-ax013-v1": null,
      "codex-ax015-v1": null,
      "codex-ax016-v1": null,
      "codex-ax034-v1": null,
      "codex-ax035-v1": null,
      "codex-ax036-v1": null,
      "codex-ax037-v1": null,
      "codex-ax043-v1": null,
      "codex-c004-v1": null,
      "codex-c015-v1": null,
      "codex-c016-v1": null,
      "codex-c029-v1": null,
      "codex-c046-v1": null,
      "codex-c047-v1": null,
      "codex-c048-v1": null,
      "codex-c049-v1": null,
      "codex-c050-v2": null,
      "codex-c054-v2": null,
      "codex-c055-v2": null,
      "codex-c056-v2": null,
      "codex-c057-v1": null,
      "codex-c057-v2": null,
      "codex-c059-v1": null,
      "codex-c060-v1": null,
      "codex-c060-v2": null,
      "codex-c061-v2": null,
      "codex-c064-v1": "2026-10-01",
      "codex-c065-v1": null,
      "codex-c081-v1": null,
      "codex-c082-v1": null,
      "codex-c087-v1": null,
      "codex-c092-v1": null,
      "codex-c093-v1": null,
      "codex-c094-v1": null,
      "codex-c096-v1": null,
      "codex-c097-v1": null,
      "codex-c098-v1": null,
      "codex-c100-v1": null,
      "codex-c101-v1": null,
      "codex-c102-v1": null,
      "codex-c103-v1": null,
      "codex-c104-v1": null,
      "codex-c105-v1": null,
      "codex-c107-v1": null,
      "codex-c108-v1": null,
      "codex-if002-v1": null,
      "codex-if004-v1": null,
      "codex-if005-v1": null,
      "codex-if007-v1": null,
      "codex-if008-v1": null,
      "codex-if010-v1": null,
      "codex-if011-v1": null,
      "codex-if012-v1": null,
      "codex-if014-v1": null,
      "codex-if015-v1": null,
      "codex-if016-v1": null,
      "codex-n001-v1": null,
      "codex-n002-v1": null,
      "codex-n005-v1": null,
      "codex-n006-v1": null,
      "codex-n009-v1": "2027-03-01",
      "codex-n010-v1": null,
      "codex-n011-v1": null,
      "codex-n013-v1": null,
      "codex-n014-v1": null,
      "codex-n015-v1": null,
      "codex-n016-v1": null,
      "codex-n017-v1": null,
      "codex-n018-v1": null,
      "codex-n019-v1": null,
      "codex-n020-v1": null,
      "codex-n021-v1": null,
      "codex-n022-v1": null,
      "codex-n023-v1": null,
      "codex-n025-v1": null,
      "codex-n027-v1": null,
      "codex-n029-v1": null,
      "codex-n030-v1": null,
      "codex-n031-v1": null,
      "codex-n032-v1": null,
      "codex-n033-v1": null,
      "codex-n034-v1": null,
      "codex-n035-v1": null,
      "codex-n036-v1": null,
      "codex-n037-v1": null,
      "codex-n038-v1": null,
      "codex-n039-v1": null,
      "codex-n040-v1": null,
      "codex-n041-v1": null,
      "codex-n042-v1": null,
      "codex-n043-v1": null,
      "codex-n044-v1": null,
      "codex-n045-v1": null,
      "codex-n046-v1": null,
      "codex-n047-v1": null,
      "codex-n048-v1": null,
      "codex-n049-v1": null,
      "codex-s-wb-pt-enrol-v1": null,
      "codex-s-wb-pt-return-v1": null,
      "dgft-iec": null,
      "epfo-international-workers": "2026-09-15",
      "epfo-joinee-exit": null,
      "epr-plastic": "2027-06-30",
      "esic-half-yearly": "2026-11-11",
      "esic-monthly": "2026-09-15",
      "fire-noc": null,
      "fssai-form-d1": "2027-05-31",
      "fssai-renewal": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-einvoice": null,
      "gst-eway": null,
      "gst-gstr1": "2026-10-01",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-03-01",
      "gst-gstr7": "2026-09-10",
      "gst-gstr8": "2026-09-10",
      "gst-gstr9": "2026-12-31",
      "gst-gstr9c": "2026-12-31",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-bonus": "2026-11-30",
      "labour-factory-licence": null,
      "labour-gratuity": null,
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "lm-weights": null,
      "mca-adt1": null,
      "mca-agm": "2026-09-30",
      "mca-aoc4": "2027-03-01",
      "mca-aoc4-cfs": "2027-03-01",
      "mca-ben2": null,
      "mca-board-meetings": "2026-12-01",
      "mca-chg1": null,
      "mca-dir12": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-dpt3": "2027-06-30",
      "mca-inc20a": null,
      "mca-inc22a": null,
      "mca-mgt7": "2027-03-01",
      "mca-msme1": "2026-10-30",
      "mca-pas3": null,
      "mca-sh7": null,
      "msme-45day": null,
      "municipal-health-noc": null,
      "municipal-signage": "2027-03-01",
      "municipal-trade-renewal": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "rbi-fcgpr": null,
      "rbi-fla": "2027-07-15",
      "spcb-cte": null,
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-27q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "acc-schedule-iii",
      "audit-statutory",
      "clra-licence",
      "codex-ax001-v1",
      "codex-ax002-v1",
      "codex-ax003-v1",
      "codex-ax005-v1",
      "codex-ax006-v1",
      "codex-ax007-v1",
      "codex-ax008-v1",
      "codex-ax009-v1",
      "codex-ax010-v1",
      "codex-ax011-v1",
      "codex-ax012-v1",
      "codex-ax013-v1",
      "codex-ax015-v1",
      "codex-ax016-v1",
      "codex-ax034-v1",
      "codex-ax035-v1",
      "codex-ax036-v1",
      "codex-ax037-v1",
      "codex-ax043-v1",
      "codex-c004-v1",
      "codex-c015-v1",
      "codex-c016-v1",
      "codex-c029-v1",
      "codex-c046-v1",
      "codex-c047-v1",
      "codex-c048-v1",
      "codex-c049-v1",
      "codex-c050-v2",
      "codex-c054-v2",
      "codex-c055-v2",
      "codex-c056-v2",
      "codex-c057-v1",
      "codex-c057-v2",
      "codex-c059-v1",
      "codex-c060-v1",
      "codex-c060-v2",
      "codex-c061-v2",
      "codex-c064-v1",
      "codex-c065-v1",
      "codex-c081-v1",
      "codex-c082-v1",
      "codex-c087-v1",
      "codex-c092-v1",
      "codex-c093-v1",
      "codex-c094-v1",
      "codex-c096-v1",
      "codex-c097-v1",
      "codex-c098-v1",
      "codex-c100-v1",
      "codex-c101-v1",
      "codex-c102-v1",
      "codex-c103-v1",
      "codex-c104-v1",
      "codex-c105-v1",
      "codex-c107-v1",
      "codex-c108-v1",
      "codex-if002-v1",
      "codex-if004-v1",
      "codex-if005-v1",
      "codex-if007-v1",
      "codex-if008-v1",
      "codex-if010-v1",
      "codex-if011-v1",
      "codex-if012-v1",
      "codex-if014-v1",
      "codex-if015-v1",
      "codex-if016-v1",
      "codex-n001-v1",
      "codex-n002-v1",
      "codex-n005-v1",
      "codex-n006-v1",
      "codex-n009-v1",
      "codex-n010-v1",
      "codex-n011-v1",
      "codex-n013-v1",
      "codex-n014-v1",
      "codex-n015-v1",
      "codex-n016-v1",
      "codex-n017-v1",
      "codex-n018-v1",
      "codex-n019-v1",
      "codex-n020-v1",
      "codex-n021-v1",
      "codex-n022-v1",
      "codex-n023-v1",
      "codex-n025-v1",
      "codex-n027-v1",
      "codex-n029-v1",
      "codex-n030-v1",
      "codex-n031-v1",
      "codex-n032-v1",
      "codex-n033-v1",
      "codex-n034-v1",
      "codex-n035-v1",
      "codex-n036-v1",
      "codex-n037-v1",
      "codex-n038-v1",
      "codex-n039-v1",
      "codex-n040-v1",
      "codex-n041-v1",
      "codex-n042-v1",
      "codex-n043-v1",
      "codex-n044-v1",
      "codex-n045-v1",
      "codex-n046-v1",
      "codex-n047-v1",
      "codex-n048-v1",
      "codex-n049-v1",
      "codex-s-wb-pt-enrol-v1",
      "codex-s-wb-pt-return-v1",
      "dgft-iec",
      "epfo-international-workers",
      "epfo-joinee-exit",
      "epr-plastic",
      "esic-half-yearly",
      "esic-monthly",
      "fire-noc",
      "fssai-form-d1",
      "fssai-renewal",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-einvoice",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr8",
      "gst-gstr9",
      "gst-gstr9c",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-bonus",
      "labour-factory-licence",
      "labour-gratuity",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "lm-packaged",
      "lm-weights",
      "mca-adt1",
      "mca-agm",
      "mca-aoc4",
      "mca-aoc4-cfs",
      "mca-ben2",
      "mca-board-meetings",
      "mca-chg1",
      "mca-dir12",
      "mca-dir3-kyc",
      "mca-dpt3",
      "mca-inc20a",
      "mca-inc22a",
      "mca-mgt7",
      "mca-msme1",
      "mca-pas3",
      "mca-sh7",
      "msme-45day",
      "municipal-health-noc",
      "municipal-signage",
      "municipal-trade-renewal",
      "posh-annual-report",
      "posh-ic",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "rbi-fcgpr",
      "rbi-fla",
      "spcb-cte",
      "spcb-hazwaste",
      "tds-15ca-cb",
      "tds-24q",
      "tds-26q",
      "tds-27q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
  "ent-brightpath": {
    "dues": {
      "acc-schedule-iii": "2027-03-31",
      "audit-statutory": "2026-09-30",
      "codex-ax001-v1": null,
      "codex-ax002-v1": null,
      "codex-ax003-v1": null,
      "codex-ax005-v1": null,
      "codex-ax006-v1": null,
      "codex-ax007-v1": null,
      "codex-ax008-v1": null,
      "codex-ax009-v1": null,
      "codex-ax010-v1": null,
      "codex-ax011-v1": null,
      "codex-ax012-v1": null,
      "codex-ax013-v1": null,
      "codex-ax024-v1": null,
      "codex-c004-v1": null,
      "codex-c015-v1": null,
      "codex-c016-v1": null,
      "codex-c029-v1": null,
      "codex-c046-v1": null,
      "codex-c047-v1": null,
      "codex-c048-v1": null,
      "codex-c049-v1": null,
      "codex-c050-v2": null,
      "codex-c054-v2": null,
      "codex-c055-v2": null,
      "codex-c056-v2": null,
      "codex-c057-v1": null,
      "codex-c057-v2": null,
      "codex-c059-v1": null,
      "codex-c060-v1": null,
      "codex-c060-v2": null,
      "codex-c061-v2": null,
      "codex-c064-v1": "2026-10-01",
      "codex-c065-v1": null,
      "codex-c081-v1": null,
      "codex-c082-v1": null,
      "codex-c087-v1": null,
      "codex-c092-v1": null,
      "codex-c093-v1": null,
      "codex-c094-v1": null,
      "codex-c096-v1": null,
      "codex-c097-v1": null,
      "codex-c098-v1": null,
      "codex-c100-v1": null,
      "codex-c101-v1": null,
      "codex-c102-v1": null,
      "codex-c103-v1": null,
      "codex-c104-v1": null,
      "codex-c105-v1": null,
      "codex-c107-v1": null,
      "codex-c108-v1": null,
      "codex-if002-v1": null,
      "codex-if004-v1": null,
      "codex-if005-v1": null,
      "codex-if007-v1": null,
      "codex-if008-v1": null,
      "codex-if010-v1": null,
      "codex-if011-v1": null,
      "codex-if012-v1": null,
      "codex-if014-v1": null,
      "codex-if015-v1": null,
      "codex-if016-v1": null,
      "codex-n001-v1": null,
      "codex-n002-v1": null,
      "codex-n005-v1": null,
      "codex-n006-v1": null,
      "codex-n009-v1": "2027-03-01",
      "codex-n010-v1": null,
      "codex-n011-v1": null,
      "codex-n013-v1": null,
      "codex-n014-v1": null,
      "codex-n015-v1": null,
      "codex-n016-v1": null,
      "codex-n017-v1": null,
      "codex-n018-v1": null,
      "codex-n019-v1": null,
      "codex-n020-v1": null,
      "codex-n021-v1": null,
      "codex-n022-v1": null,
      "codex-n023-v1": null,
      "codex-n025-v1": null,
      "codex-n027-v1": null,
      "codex-n029-v1": null,
      "codex-n030-v1": null,
      "codex-n031-v1": null,
      "codex-n032-v1": null,
      "codex-n033-v1": null,
      "codex-n034-v1": null,
      "codex-n035-v1": null,
      "codex-n036-v1": null,
      "codex-n037-v1": null,
      "codex-n038-v1": null,
      "codex-n039-v1": null,
      "codex-n040-v1": null,
      "codex-n041-v1": null,
      "codex-n042-v1": null,
      "codex-n043-v1": null,
      "codex-n044-v1": null,
      "codex-n045-v1": null,
      "codex-n046-v1": null,
      "codex-n047-v1": null,
      "codex-n048-v1": null,
      "codex-n049-v1": null,
      "codex-s-ka-pt-reg-v1": null,
      "dgft-iec": null,
      "epr-plastic": "2027-06-30",
      "fire-noc": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-10-01",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-03-01",
      "gst-gstr7": "2026-09-10",
      "gst-gstr8": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-advance-tax": "2026-09-15",
      "it-books-sec44aa": null,
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-registers": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "mca-adt1": null,
      "mca-agm": "2026-09-30",
      "mca-aoc4": "2027-03-01",
      "mca-aoc4-cfs": "2027-03-01",
      "mca-ben2": null,
      "mca-board-meetings": "2026-12-01",
      "mca-chg1": null,
      "mca-dir12": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-dpt3": "2027-06-30",
      "mca-inc20a": null,
      "mca-inc22a": null,
      "mca-mgt7": "2027-03-01",
      "mca-msme1": "2026-10-30",
      "mca-pas3": null,
      "mca-sh7": null,
      "msme-45day": null,
      "msme-udyam": null,
      "municipal-trade-renewal": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "rbi-fcgpr": null,
      "rbi-fla": "2027-07-15",
      "spcb-cte": null,
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
    },
    "ids": [
      "acc-schedule-iii",
      "audit-statutory",
      "codex-ax001-v1",
      "codex-ax002-v1",
      "codex-ax003-v1",
      "codex-ax005-v1",
      "codex-ax006-v1",
      "codex-ax007-v1",
      "codex-ax008-v1",
      "codex-ax009-v1",
      "codex-ax010-v1",
      "codex-ax011-v1",
      "codex-ax012-v1",
      "codex-ax013-v1",
      "codex-ax024-v1",
      "codex-c004-v1",
      "codex-c015-v1",
      "codex-c016-v1",
      "codex-c029-v1",
      "codex-c046-v1",
      "codex-c047-v1",
      "codex-c048-v1",
      "codex-c049-v1",
      "codex-c050-v2",
      "codex-c054-v2",
      "codex-c055-v2",
      "codex-c056-v2",
      "codex-c057-v1",
      "codex-c057-v2",
      "codex-c059-v1",
      "codex-c060-v1",
      "codex-c060-v2",
      "codex-c061-v2",
      "codex-c064-v1",
      "codex-c065-v1",
      "codex-c081-v1",
      "codex-c082-v1",
      "codex-c087-v1",
      "codex-c092-v1",
      "codex-c093-v1",
      "codex-c094-v1",
      "codex-c096-v1",
      "codex-c097-v1",
      "codex-c098-v1",
      "codex-c100-v1",
      "codex-c101-v1",
      "codex-c102-v1",
      "codex-c103-v1",
      "codex-c104-v1",
      "codex-c105-v1",
      "codex-c107-v1",
      "codex-c108-v1",
      "codex-if002-v1",
      "codex-if004-v1",
      "codex-if005-v1",
      "codex-if007-v1",
      "codex-if008-v1",
      "codex-if010-v1",
      "codex-if011-v1",
      "codex-if012-v1",
      "codex-if014-v1",
      "codex-if015-v1",
      "codex-if016-v1",
      "codex-n001-v1",
      "codex-n002-v1",
      "codex-n005-v1",
      "codex-n006-v1",
      "codex-n009-v1",
      "codex-n010-v1",
      "codex-n011-v1",
      "codex-n013-v1",
      "codex-n014-v1",
      "codex-n015-v1",
      "codex-n016-v1",
      "codex-n017-v1",
      "codex-n018-v1",
      "codex-n019-v1",
      "codex-n020-v1",
      "codex-n021-v1",
      "codex-n022-v1",
      "codex-n023-v1",
      "codex-n025-v1",
      "codex-n027-v1",
      "codex-n029-v1",
      "codex-n030-v1",
      "codex-n031-v1",
      "codex-n032-v1",
      "codex-n033-v1",
      "codex-n034-v1",
      "codex-n035-v1",
      "codex-n036-v1",
      "codex-n037-v1",
      "codex-n038-v1",
      "codex-n039-v1",
      "codex-n040-v1",
      "codex-n041-v1",
      "codex-n042-v1",
      "codex-n043-v1",
      "codex-n044-v1",
      "codex-n045-v1",
      "codex-n046-v1",
      "codex-n047-v1",
      "codex-n048-v1",
      "codex-n049-v1",
      "codex-s-ka-pt-reg-v1",
      "dgft-iec",
      "epr-plastic",
      "fire-noc",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr8",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-advance-tax",
      "it-books-sec44aa",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-lwf",
      "labour-min-wages",
      "labour-registers",
      "labour-shops-renewal",
      "law-change-watch",
      "lm-packaged",
      "mca-adt1",
      "mca-agm",
      "mca-aoc4",
      "mca-aoc4-cfs",
      "mca-ben2",
      "mca-board-meetings",
      "mca-chg1",
      "mca-dir12",
      "mca-dir3-kyc",
      "mca-dpt3",
      "mca-inc20a",
      "mca-inc22a",
      "mca-mgt7",
      "mca-msme1",
      "mca-pas3",
      "mca-sh7",
      "msme-45day",
      "msme-udyam",
      "municipal-trade-renewal",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "rbi-fcgpr",
      "rbi-fla",
      "spcb-cte",
      "spcb-hazwaste",
      "tds-15ca-cb",
    ],
  },
  "ent-nova": {
    "dues": {
      "codex-ax001-v1": null,
      "codex-ax002-v1": null,
      "codex-ax003-v1": null,
      "codex-ax005-v1": null,
      "codex-ax006-v1": null,
      "codex-ax007-v1": null,
      "codex-ax008-v1": null,
      "codex-ax009-v1": null,
      "codex-ax010-v1": null,
      "codex-ax011-v1": null,
      "codex-ax012-v1": null,
      "codex-ax013-v1": null,
      "codex-ax022-v1": null,
      "codex-ax023-v1": null,
      "codex-ax031-v1": null,
      "codex-c004-v1": null,
      "codex-c032-v1": null,
      "codex-c046-v1": null,
      "codex-c047-v1": null,
      "codex-c048-v1": null,
      "codex-c049-v1": null,
      "codex-c050-v2": null,
      "codex-c054-v2": null,
      "codex-c055-v2": null,
      "codex-c056-v2": null,
      "codex-c057-v1": null,
      "codex-c057-v2": null,
      "codex-c059-v1": null,
      "codex-c060-v1": null,
      "codex-c060-v2": null,
      "codex-c061-v2": null,
      "codex-c064-v1": "2026-10-01",
      "codex-c065-v1": null,
      "codex-c081-v1": null,
      "codex-c082-v1": null,
      "codex-c087-v1": null,
      "codex-c094-v1": null,
      "codex-c096-v1": null,
      "codex-c097-v1": null,
      "codex-c098-v1": null,
      "codex-c101-v1": null,
      "codex-c102-v1": null,
      "codex-c103-v1": null,
      "codex-c104-v1": null,
      "codex-c105-v1": null,
      "codex-c107-v1": null,
      "codex-if005-v1": null,
      "codex-if007-v1": null,
      "codex-if008-v1": null,
      "codex-if009-v1": null,
      "codex-if014-v1": null,
      "codex-if015-v1": null,
      "codex-n003-v1": null,
      "codex-n004-v1": null,
      "codex-n009-v1": "2027-03-01",
      "codex-n010-v1": null,
      "codex-n011-v1": null,
      "codex-n013-v1": null,
      "codex-n014-v1": null,
      "codex-n015-v1": null,
      "codex-n016-v1": null,
      "codex-n017-v1": null,
      "codex-n018-v1": null,
      "codex-n019-v1": null,
      "codex-n020-v1": null,
      "codex-n021-v1": null,
      "codex-n022-v1": null,
      "codex-n023-v1": null,
      "codex-n025-v1": null,
      "codex-n026-v1": null,
      "codex-n029-v1": null,
      "codex-n030-v1": null,
      "codex-n031-v1": null,
      "codex-n032-v1": null,
      "codex-n033-v1": null,
      "codex-n034-v1": null,
      "codex-n035-v1": null,
      "codex-n036-v1": null,
      "codex-n037-v1": null,
      "codex-n038-v1": null,
      "codex-n039-v1": null,
      "codex-n040-v1": null,
      "codex-n041-v1": null,
      "codex-n042-v1": null,
      "codex-n043-v1": null,
      "codex-n044-v1": null,
      "codex-n045-v1": null,
      "codex-n046-v1": null,
      "codex-n047-v1": null,
      "codex-n048-v1": null,
      "codex-n049-v1": null,
      "codex-s-mh-pt-reg-v1": null,
      "dgft-iec": null,
      "epr-plastic": "2027-06-30",
      "esic-registration": null,
      "fire-noc": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-10-01",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-03-01",
      "gst-gstr7": "2026-09-10",
      "gst-gstr8": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-business-itr": "2027-07-31",
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-factory-licence": null,
      "labour-gratuity": null,
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "mca-dir3-kyc": "2026-09-30",
      "mca-llp-form11": "2027-05-30",
      "mca-llp-form8": "2027-03-01",
      "msme-45day": null,
      "msme-udyam": null,
      "municipal-trade-licence": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "pt-first-employee": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-apr": "2026-12-31",
      "rbi-fla": "2027-07-15",
      "spcb-cte": null,
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-27q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "codex-ax001-v1",
      "codex-ax002-v1",
      "codex-ax003-v1",
      "codex-ax005-v1",
      "codex-ax006-v1",
      "codex-ax007-v1",
      "codex-ax008-v1",
      "codex-ax009-v1",
      "codex-ax010-v1",
      "codex-ax011-v1",
      "codex-ax012-v1",
      "codex-ax013-v1",
      "codex-ax022-v1",
      "codex-ax023-v1",
      "codex-ax031-v1",
      "codex-c004-v1",
      "codex-c032-v1",
      "codex-c046-v1",
      "codex-c047-v1",
      "codex-c048-v1",
      "codex-c049-v1",
      "codex-c050-v2",
      "codex-c054-v2",
      "codex-c055-v2",
      "codex-c056-v2",
      "codex-c057-v1",
      "codex-c057-v2",
      "codex-c059-v1",
      "codex-c060-v1",
      "codex-c060-v2",
      "codex-c061-v2",
      "codex-c064-v1",
      "codex-c065-v1",
      "codex-c081-v1",
      "codex-c082-v1",
      "codex-c087-v1",
      "codex-c094-v1",
      "codex-c096-v1",
      "codex-c097-v1",
      "codex-c098-v1",
      "codex-c101-v1",
      "codex-c102-v1",
      "codex-c103-v1",
      "codex-c104-v1",
      "codex-c105-v1",
      "codex-c107-v1",
      "codex-if005-v1",
      "codex-if007-v1",
      "codex-if008-v1",
      "codex-if009-v1",
      "codex-if014-v1",
      "codex-if015-v1",
      "codex-n003-v1",
      "codex-n004-v1",
      "codex-n009-v1",
      "codex-n010-v1",
      "codex-n011-v1",
      "codex-n013-v1",
      "codex-n014-v1",
      "codex-n015-v1",
      "codex-n016-v1",
      "codex-n017-v1",
      "codex-n018-v1",
      "codex-n019-v1",
      "codex-n020-v1",
      "codex-n021-v1",
      "codex-n022-v1",
      "codex-n023-v1",
      "codex-n025-v1",
      "codex-n026-v1",
      "codex-n029-v1",
      "codex-n030-v1",
      "codex-n031-v1",
      "codex-n032-v1",
      "codex-n033-v1",
      "codex-n034-v1",
      "codex-n035-v1",
      "codex-n036-v1",
      "codex-n037-v1",
      "codex-n038-v1",
      "codex-n039-v1",
      "codex-n040-v1",
      "codex-n041-v1",
      "codex-n042-v1",
      "codex-n043-v1",
      "codex-n044-v1",
      "codex-n045-v1",
      "codex-n046-v1",
      "codex-n047-v1",
      "codex-n048-v1",
      "codex-n049-v1",
      "codex-s-mh-pt-reg-v1",
      "dgft-iec",
      "epr-plastic",
      "esic-registration",
      "fire-noc",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr8",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-business-itr",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-factory-licence",
      "labour-gratuity",
      "labour-lwf",
      "labour-min-wages",
      "labour-shops-renewal",
      "law-change-watch",
      "lm-packaged",
      "mca-dir3-kyc",
      "mca-llp-form11",
      "mca-llp-form8",
      "msme-45day",
      "msme-udyam",
      "municipal-trade-licence",
      "posh-annual-report",
      "posh-ic",
      "pt-first-employee",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-apr",
      "rbi-fla",
      "spcb-cte",
      "spcb-hazwaste",
      "tds-15ca-cb",
      "tds-24q",
      "tds-26q",
      "tds-27q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
  "ent-pixel": {
    "dues": {
      "codex-ax001-v1": null,
      "codex-ax002-v1": null,
      "codex-ax003-v1": null,
      "codex-ax005-v1": null,
      "codex-ax006-v1": null,
      "codex-ax007-v1": null,
      "codex-ax008-v1": null,
      "codex-ax009-v1": null,
      "codex-ax010-v1": null,
      "codex-ax011-v1": null,
      "codex-ax012-v1": null,
      "codex-ax013-v1": null,
      "codex-ax030-v1": null,
      "codex-c004-v1": null,
      "codex-c036-v1": null,
      "codex-c037-v1": null,
      "codex-c046-v1": null,
      "codex-c047-v1": null,
      "codex-c048-v1": null,
      "codex-c049-v1": null,
      "codex-c050-v2": null,
      "codex-c054-v2": null,
      "codex-c055-v2": null,
      "codex-c056-v2": null,
      "codex-c057-v1": null,
      "codex-c057-v2": null,
      "codex-c059-v1": null,
      "codex-c060-v1": null,
      "codex-c060-v2": null,
      "codex-c061-v2": null,
      "codex-c064-v1": "2026-10-01",
      "codex-c065-v1": null,
      "codex-c081-v1": null,
      "codex-c082-v1": null,
      "codex-c087-v1": null,
      "codex-c094-v1": null,
      "codex-c096-v1": null,
      "codex-c097-v1": null,
      "codex-c098-v1": null,
      "codex-c101-v1": null,
      "codex-c102-v1": null,
      "codex-c103-v1": null,
      "codex-c104-v1": null,
      "codex-c105-v1": null,
      "codex-c107-v1": null,
      "codex-if005-v1": null,
      "codex-if007-v1": null,
      "codex-if008-v1": null,
      "codex-if014-v1": null,
      "codex-if015-v1": null,
      "codex-n009-v1": "2027-03-01",
      "codex-n010-v1": null,
      "codex-n011-v1": null,
      "codex-n013-v1": null,
      "codex-n014-v1": null,
      "codex-n015-v1": null,
      "codex-n016-v1": null,
      "codex-n017-v1": null,
      "codex-n018-v1": null,
      "codex-n019-v1": null,
      "codex-n020-v1": null,
      "codex-n021-v1": null,
      "codex-n022-v1": null,
      "codex-n023-v1": null,
      "codex-n025-v1": null,
      "codex-n029-v1": null,
      "codex-n030-v1": null,
      "codex-n031-v1": null,
      "codex-n032-v1": null,
      "codex-n033-v1": null,
      "codex-n034-v1": null,
      "codex-n035-v1": null,
      "codex-n036-v1": null,
      "codex-n037-v1": null,
      "codex-n038-v1": null,
      "codex-n039-v1": null,
      "codex-n040-v1": null,
      "codex-n041-v1": null,
      "codex-n042-v1": null,
      "codex-n043-v1": null,
      "codex-n044-v1": null,
      "codex-n045-v1": null,
      "codex-n046-v1": null,
      "codex-n047-v1": null,
      "codex-n048-v1": null,
      "codex-n049-v1": null,
      "dgft-iec": null,
      "epr-plastic": "2027-06-30",
      "fire-noc": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-eway": null,
      "gst-gstr1": "2026-10-01",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-03-01",
      "gst-gstr7": "2026-09-10",
      "gst-gstr8": "2026-09-10",
      "gst-qrpm-optin": "2027-04-30",
      "ip-opposition": null,
      "it-advance-tax": "2026-09-15",
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-shops-renewal": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "msme-udyam": null,
      "municipal-trade-licence": null,
      "pt-monthly-return": "2026-09-21",
      "pt-ptrc": null,
      "rbi-fla": "2027-07-15",
      "spcb-cte": null,
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
    },
    "ids": [
      "codex-ax001-v1",
      "codex-ax002-v1",
      "codex-ax003-v1",
      "codex-ax005-v1",
      "codex-ax006-v1",
      "codex-ax007-v1",
      "codex-ax008-v1",
      "codex-ax009-v1",
      "codex-ax010-v1",
      "codex-ax011-v1",
      "codex-ax012-v1",
      "codex-ax013-v1",
      "codex-ax030-v1",
      "codex-c004-v1",
      "codex-c036-v1",
      "codex-c037-v1",
      "codex-c046-v1",
      "codex-c047-v1",
      "codex-c048-v1",
      "codex-c049-v1",
      "codex-c050-v2",
      "codex-c054-v2",
      "codex-c055-v2",
      "codex-c056-v2",
      "codex-c057-v1",
      "codex-c057-v2",
      "codex-c059-v1",
      "codex-c060-v1",
      "codex-c060-v2",
      "codex-c061-v2",
      "codex-c064-v1",
      "codex-c065-v1",
      "codex-c081-v1",
      "codex-c082-v1",
      "codex-c087-v1",
      "codex-c094-v1",
      "codex-c096-v1",
      "codex-c097-v1",
      "codex-c098-v1",
      "codex-c101-v1",
      "codex-c102-v1",
      "codex-c103-v1",
      "codex-c104-v1",
      "codex-c105-v1",
      "codex-c107-v1",
      "codex-if005-v1",
      "codex-if007-v1",
      "codex-if008-v1",
      "codex-if014-v1",
      "codex-if015-v1",
      "codex-n009-v1",
      "codex-n010-v1",
      "codex-n011-v1",
      "codex-n013-v1",
      "codex-n014-v1",
      "codex-n015-v1",
      "codex-n016-v1",
      "codex-n017-v1",
      "codex-n018-v1",
      "codex-n019-v1",
      "codex-n020-v1",
      "codex-n021-v1",
      "codex-n022-v1",
      "codex-n023-v1",
      "codex-n025-v1",
      "codex-n029-v1",
      "codex-n030-v1",
      "codex-n031-v1",
      "codex-n032-v1",
      "codex-n033-v1",
      "codex-n034-v1",
      "codex-n035-v1",
      "codex-n036-v1",
      "codex-n037-v1",
      "codex-n038-v1",
      "codex-n039-v1",
      "codex-n040-v1",
      "codex-n041-v1",
      "codex-n042-v1",
      "codex-n043-v1",
      "codex-n044-v1",
      "codex-n045-v1",
      "codex-n046-v1",
      "codex-n047-v1",
      "codex-n048-v1",
      "codex-n049-v1",
      "dgft-iec",
      "epr-plastic",
      "fire-noc",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr8",
      "gst-qrpm-optin",
      "ip-opposition",
      "it-advance-tax",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-lwf",
      "labour-min-wages",
      "labour-shops-renewal",
      "law-change-watch",
      "lm-packaged",
      "msme-udyam",
      "municipal-trade-licence",
      "pt-monthly-return",
      "pt-ptrc",
      "rbi-fla",
      "spcb-cte",
      "spcb-hazwaste",
      "tds-15ca-cb",
    ],
  },
  "ent-spice": {
    "dues": {
      "clra-licence": null,
      "codex-ax001-v1": null,
      "codex-ax002-v1": null,
      "codex-ax003-v1": null,
      "codex-ax005-v1": null,
      "codex-ax006-v1": null,
      "codex-ax007-v1": null,
      "codex-ax008-v1": null,
      "codex-ax009-v1": null,
      "codex-ax010-v1": null,
      "codex-ax011-v1": null,
      "codex-ax012-v1": null,
      "codex-ax013-v1": null,
      "codex-c004-v1": null,
      "codex-c046-v1": null,
      "codex-c047-v1": null,
      "codex-c048-v1": null,
      "codex-c049-v1": null,
      "codex-c050-v2": null,
      "codex-c054-v2": null,
      "codex-c055-v2": null,
      "codex-c056-v2": null,
      "codex-c057-v1": null,
      "codex-c057-v2": null,
      "codex-c059-v1": null,
      "codex-c060-v1": null,
      "codex-c060-v2": null,
      "codex-c061-v2": null,
      "codex-c064-v1": "2026-10-01",
      "codex-c065-v1": null,
      "codex-c081-v1": null,
      "codex-c082-v1": null,
      "codex-c087-v1": null,
      "codex-c094-v1": null,
      "codex-c096-v1": null,
      "codex-c097-v1": null,
      "codex-c098-v1": null,
      "codex-c101-v1": null,
      "codex-c102-v1": null,
      "codex-c103-v1": null,
      "codex-c104-v1": null,
      "codex-c105-v1": null,
      "codex-c107-v1": null,
      "codex-if005-v1": null,
      "codex-if007-v1": null,
      "codex-if008-v1": null,
      "codex-if014-v1": null,
      "codex-n009-v1": "2027-03-01",
      "codex-n010-v1": null,
      "codex-n011-v1": null,
      "codex-n013-v1": null,
      "codex-n014-v1": null,
      "codex-n015-v1": null,
      "codex-n016-v1": null,
      "codex-n017-v1": null,
      "codex-n018-v1": null,
      "codex-n019-v1": null,
      "codex-n020-v1": null,
      "codex-n021-v1": null,
      "codex-n022-v1": null,
      "codex-n023-v1": null,
      "codex-n025-v1": null,
      "codex-n029-v1": null,
      "codex-n030-v1": null,
      "codex-n031-v1": null,
      "codex-n032-v1": null,
      "codex-n033-v1": null,
      "codex-n034-v1": null,
      "codex-n035-v1": null,
      "codex-n036-v1": null,
      "codex-n037-v1": null,
      "codex-n038-v1": null,
      "codex-n039-v1": null,
      "codex-n040-v1": null,
      "codex-n041-v1": null,
      "codex-n042-v1": null,
      "codex-n043-v1": null,
      "codex-n044-v1": null,
      "codex-n045-v1": null,
      "codex-n046-v1": null,
      "codex-n047-v1": null,
      "codex-n048-v1": null,
      "codex-n049-v1": null,
      "dgft-iec-update": "2027-03-01",
      "dgft-rcmc": null,
      "epfo-international-workers": "2026-09-15",
      "epfo-joinee-exit": null,
      "epr-plastic": "2027-06-30",
      "esic-half-yearly": "2026-11-11",
      "esic-monthly": "2026-09-15",
      "fire-noc": null,
      "fssai-form-d1": "2027-05-31",
      "fssai-renewal": null,
      "fssai-state-licence": null,
      "gst-apob": null,
      "gst-asmt10": null,
      "gst-cmp08": "2026-09-18",
      "gst-einvoice": null,
      "gst-eway": null,
      "gst-gstr1": "2026-10-01",
      "gst-gstr1a": "2026-10-01",
      "gst-gstr3b": "2026-09-20",
      "gst-gstr4": "2027-03-01",
      "gst-gstr7": "2026-09-10",
      "gst-gstr8": "2026-09-10",
      "gst-gstr9": "2026-12-31",
      "gst-gstr9c": "2026-12-31",
      "gst-itc04": "2026-10-25",
      "gst-lut": "2027-04-01",
      "ip-opposition": null,
      "it-44ab-audit": "2026-09-30",
      "it-advance-tax": "2026-09-15",
      "it-form-3ce": "2026-10-31",
      "it-notice-143": null,
      "it-sft": "2027-05-31",
      "labour-bonus": "2026-11-30",
      "labour-factory-licence": null,
      "labour-gratuity": null,
      "labour-lwf": "2026-12-15",
      "labour-min-wages": null,
      "labour-shops-reg": null,
      "law-change-watch": null,
      "lm-packaged": null,
      "municipal-trade-licence": null,
      "posh-annual-report": "2027-01-31",
      "posh-ic": null,
      "pt-ptec": null,
      "pt-ptrc": null,
      "spcb-cto": null,
      "spcb-form-v": "2026-09-30",
      "spcb-hazwaste": null,
      "tds-15ca-cb": null,
      "tds-24q": "2026-10-31",
      "tds-26q": "2026-10-31",
      "tds-27q": "2026-10-31",
      "tds-deposit": "2026-10-07",
      "tds-form16": "2027-06-15",
      "tds-form16a": "2026-12-01",
    },
    "ids": [
      "clra-licence",
      "codex-ax001-v1",
      "codex-ax002-v1",
      "codex-ax003-v1",
      "codex-ax005-v1",
      "codex-ax006-v1",
      "codex-ax007-v1",
      "codex-ax008-v1",
      "codex-ax009-v1",
      "codex-ax010-v1",
      "codex-ax011-v1",
      "codex-ax012-v1",
      "codex-ax013-v1",
      "codex-c004-v1",
      "codex-c046-v1",
      "codex-c047-v1",
      "codex-c048-v1",
      "codex-c049-v1",
      "codex-c050-v2",
      "codex-c054-v2",
      "codex-c055-v2",
      "codex-c056-v2",
      "codex-c057-v1",
      "codex-c057-v2",
      "codex-c059-v1",
      "codex-c060-v1",
      "codex-c060-v2",
      "codex-c061-v2",
      "codex-c064-v1",
      "codex-c065-v1",
      "codex-c081-v1",
      "codex-c082-v1",
      "codex-c087-v1",
      "codex-c094-v1",
      "codex-c096-v1",
      "codex-c097-v1",
      "codex-c098-v1",
      "codex-c101-v1",
      "codex-c102-v1",
      "codex-c103-v1",
      "codex-c104-v1",
      "codex-c105-v1",
      "codex-c107-v1",
      "codex-if005-v1",
      "codex-if007-v1",
      "codex-if008-v1",
      "codex-if014-v1",
      "codex-n009-v1",
      "codex-n010-v1",
      "codex-n011-v1",
      "codex-n013-v1",
      "codex-n014-v1",
      "codex-n015-v1",
      "codex-n016-v1",
      "codex-n017-v1",
      "codex-n018-v1",
      "codex-n019-v1",
      "codex-n020-v1",
      "codex-n021-v1",
      "codex-n022-v1",
      "codex-n023-v1",
      "codex-n025-v1",
      "codex-n029-v1",
      "codex-n030-v1",
      "codex-n031-v1",
      "codex-n032-v1",
      "codex-n033-v1",
      "codex-n034-v1",
      "codex-n035-v1",
      "codex-n036-v1",
      "codex-n037-v1",
      "codex-n038-v1",
      "codex-n039-v1",
      "codex-n040-v1",
      "codex-n041-v1",
      "codex-n042-v1",
      "codex-n043-v1",
      "codex-n044-v1",
      "codex-n045-v1",
      "codex-n046-v1",
      "codex-n047-v1",
      "codex-n048-v1",
      "codex-n049-v1",
      "dgft-iec-update",
      "dgft-rcmc",
      "epfo-international-workers",
      "epfo-joinee-exit",
      "epr-plastic",
      "esic-half-yearly",
      "esic-monthly",
      "fire-noc",
      "fssai-form-d1",
      "fssai-renewal",
      "fssai-state-licence",
      "gst-apob",
      "gst-asmt10",
      "gst-cmp08",
      "gst-einvoice",
      "gst-eway",
      "gst-gstr1",
      "gst-gstr1a",
      "gst-gstr3b",
      "gst-gstr4",
      "gst-gstr7",
      "gst-gstr8",
      "gst-gstr9",
      "gst-gstr9c",
      "gst-itc04",
      "gst-lut",
      "ip-opposition",
      "it-44ab-audit",
      "it-advance-tax",
      "it-form-3ce",
      "it-notice-143",
      "it-sft",
      "labour-bonus",
      "labour-factory-licence",
      "labour-gratuity",
      "labour-lwf",
      "labour-min-wages",
      "labour-shops-reg",
      "law-change-watch",
      "lm-packaged",
      "municipal-trade-licence",
      "posh-annual-report",
      "posh-ic",
      "pt-ptec",
      "pt-ptrc",
      "spcb-cto",
      "spcb-form-v",
      "spcb-hazwaste",
      "tds-15ca-cb",
      "tds-24q",
      "tds-26q",
      "tds-27q",
      "tds-deposit",
      "tds-form16",
      "tds-form16a",
    ],
  },
}
`;
